# receipt_text_detection

./: CMakeLists.txt  README.md  main.cpp
